// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarViewPure Additional Scenarios renders correctly when current note is in queue (not reviewing) 1`] = `
<div>
  <div>
    <h4>
      Incremental Reading
    </h4>
    <div
      style="margin-bottom: 15px; padding: 10px; border-radius: 5px;"
    >
      <div
        style="margin-bottom: 5px;"
      >
        Due: 
        5
      </div>
      <div>
        Total in queue: 
        20
      </div>
    </div>
    <button
      class="mod-cta"
      style="margin-bottom: 10px; width: 100%;"
    >
      Show Next
    </button>
    <div
      style="margin-bottom: 10px; padding: 10px; border-radius: 5px; text-align: center; opacity: 0.8;"
    >
      ✓ Current note is in queue
    </div>
    <button
      style="margin-top: 20px; width: 100%; font-size: 0.9em; opacity: 0.7;"
    >
      Show Queue (debug)
    </button>
  </div>
</div>
`;

exports[`SidebarViewPure Additional Scenarios renders correctly when current note is not in queue (not reviewing) 1`] = `
<div>
  <div>
    <h4>
      Incremental Reading
    </h4>
    <div
      style="margin-bottom: 15px; padding: 10px; border-radius: 5px;"
    >
      <div
        style="margin-bottom: 5px;"
      >
        Due: 
        5
      </div>
      <div>
        Total in queue: 
        20
      </div>
    </div>
    <button
      class="mod-cta"
      style="margin-bottom: 10px; width: 100%;"
    >
      Show Next
    </button>
    <button
      style="margin-bottom: 10px; width: 100%;"
    >
      Add Current Note to Queue
    </button>
    <button
      style="margin-top: 20px; width: 100%; font-size: 0.9em; opacity: 0.7;"
    >
      Show Queue (debug)
    </button>
  </div>
</div>
`;

exports[`SidebarViewPure Additional Scenarios renders correctly when there are notes due later today 1`] = `
<div>
  <div>
    <h4>
      Incremental Reading
    </h4>
    <div
      style="margin-bottom: 15px; padding: 10px; border-radius: 5px;"
    >
      <div
        style="margin-bottom: 5px;"
      >
        Due: 
        0
      </div>
      <div>
        Total in queue: 
        20
      </div>
    </div>
    <button
      class=""
      style="margin-bottom: 10px; width: 100%;"
    >
      Show Next
    </button>
    <button
      style="margin-bottom: 10px; width: 100%;"
    >
      Add Current Note to Queue
    </button>
    <button
      style="margin-top: 20px; width: 100%; font-size: 0.9em; opacity: 0.7;"
    >
      Show Queue (debug)
    </button>
  </div>
</div>
`;

exports[`SidebarViewPure Additional Scenarios renders correctly with status message after rating 1`] = `
<div>
  <div>
    <h4>
      Incremental Reading
    </h4>
    <div
      style="margin-bottom: 15px; padding: 10px; border-radius: 5px;"
    >
      <div
        style="margin-bottom: 5px;"
      >
        Due: 
        3
      </div>
      <div>
        Total in queue: 
        18
      </div>
    </div>
    <button
      class="mod-cta"
      style="margin-bottom: 10px; width: 100%;"
    >
      Show Next
    </button>
    <button
      style="margin-bottom: 10px; width: 100%;"
    >
      Add Current Note to Queue
    </button>
    <div
      style="margin-top: 10px; padding: 10px; text-align: center;"
    >
      Scheduled for 2 hours
    </div>
    <button
      style="margin-top: 20px; width: 100%; font-size: 0.9em; opacity: 0.7;"
    >
      Show Queue (debug)
    </button>
  </div>
</div>
`;

exports[`SidebarViewPure Snapshot Tests renders correctly when there are due notes and user is reviewing one 1`] = `
<div>
  <div>
    <h4>
      Incremental Reading
    </h4>
    <div
      style="margin-bottom: 15px; padding: 10px; border-radius: 5px;"
    >
      <div
        style="margin-bottom: 5px;"
      >
        Due: 
        5
      </div>
      <div>
        Total in queue: 
        25
      </div>
    </div>
    <div
      style="display: grid; grid-template-columns: 1fr 1fr; gap: 8px; margin-bottom: 15px;"
    >
      <button
        style="flex: 1;"
      >
        Again
        <div
          style="font-size: 0.75em; opacity: 0.7;"
        >
          10m
        </div>
      </button>
      <button
        style="flex: 1;"
      >
        Hard
        <div
          style="font-size: 0.75em; opacity: 0.7;"
        >
          2h
        </div>
      </button>
      <button
        class="mod-cta"
        style="flex: 1;"
      >
        Good
        <div
          style="font-size: 0.75em; opacity: 0.7;"
        >
          1d
        </div>
      </button>
      <button
        style="flex: 1;"
      >
        Easy
        <div
          style="font-size: 0.75em; opacity: 0.7;"
        >
          3d
        </div>
      </button>
    </div>
    <div
      style="margin-bottom: 15px; padding: 10px; border-radius: 5px;"
    >
      <div
        style="margin-bottom: 8px; font-weight: bold; font-size: 0.9em;"
      >
        Priority:
      </div>
      <div
        style="display: flex; gap: 6px;"
      >
        <button
          style="flex: 1; padding: 6px; border-radius: 4px; cursor: pointer; font-weight: normal;"
        >
          High
        </button>
        <button
          style="flex: 1; padding: 6px; border-radius: 4px; cursor: pointer; font-weight: bold;"
        >
          Normal
        </button>
        <button
          style="flex: 1; padding: 6px; border-radius: 4px; cursor: pointer; font-weight: normal;"
        >
          Low
        </button>
      </div>
    </div>
    <div
      style="margin-bottom: 10px; padding: 8px; text-align: center; font-size: 0.9em;"
    >
      How was this note? (Use commands or click below)
    </div>
    <details
      style="margin-top: 20px; font-size: 0.85em; opacity: 0.7;"
    >
      <summary
        style="cursor: pointer; margin-bottom: 8px; font-size: 0.9em;"
      >
        Debug: Card Stats
      </summary>
      <div
        style="padding: 10px; border-radius: 5px;"
      >
        <div
          style="margin-bottom: 2px;"
        >
          Memory: 
          3.5
          d | Difficulty:
           
          6.2
          /10
        </div>
        <div
          style="font-size: 0.9em; opacity: 0.8;"
        >
          Reviews: 
          4
           | Forgotten:
           
          1
        </div>
      </div>
    </details>
    <button
      style="margin-top: 20px; width: 100%; font-size: 0.9em; opacity: 0.7;"
    >
      Show Queue (debug)
    </button>
  </div>
</div>
`;

exports[`SidebarViewPure Snapshot Tests renders correctly when there are no notes to review 1`] = `
<div>
  <div>
    <h4>
      Incremental Reading
    </h4>
    <div
      style="margin-bottom: 15px; padding: 10px; border-radius: 5px;"
    >
      <div
        style="margin-bottom: 5px;"
      >
        Due: 
        0
      </div>
      <div>
        Total in queue: 
        15
      </div>
    </div>
    <button
      class=""
      style="margin-bottom: 10px; width: 100%;"
    >
      Show Next
    </button>
    <button
      style="margin-bottom: 10px; width: 100%;"
    >
      Add Current Note to Queue
    </button>
    <div
      style="margin-top: 10px; padding: 10px; text-align: center;"
    >
      🎉 Done for today! All caught up!
    </div>
    <button
      style="margin-top: 20px; width: 100%; font-size: 0.9em; opacity: 0.7;"
    >
      Show Queue (debug)
    </button>
  </div>
</div>
`;
